@@ -254,6 +254,8 @@ static GtkItemFactoryEntry model_items[] = {
       do_forecast, FCASTERR, NULL, GNULL },
     { N_("/Model data/Confidence intervals for coefficients"), NULL, 
       do_coeff_intervals, 0, NULL, GNULL },
+    { N_("/Model data/Confidence ellipse..."), NULL, 
+      selector_callback, ELLIPSE, NULL, GNULL },
     { N_("/Model data/coefficient covariance matrix"), NULL, 
       do_outcovmx, 0, NULL, GNULL },
     { N_("/Model data/Add to data set"), NULL, NULL, 0, "<Branch>", GNULL },
@@ -305,6 +307,8 @@ static GtkItemFactoryEntry model_items[] = {
       do_forecast, FCASTERR, NULL },
     { N_("/Model data/Confidence intervals for coefficients"), NULL, 
       do_coeff_intervals, 0, NULL },
+    { N_("/Model data/Confidence ellipse"), NULL, 
+      selector_callback, ELLIPSE, NULL },
     { N_("/Model data/coefficient covariance matrix"), NULL, 
       do_outcovmx, 0, NULL },
     { N_("/Model data/Add to data set"), NULL, NULL, 0, "<Branch>" },
